# architect-rl-env

./: .dockerignore  .gitignore  DIRECTORY_STRUCTURE.md  Dockerfile  OpenEnv_template.txt  README.md  benchmark_full.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  verify_post_done.py
api/: __init__.py  server.py
documentation/: ADVANCED_RL_FEATURES.md  BEFORE_AFTER_COMPARISON.md  BEHAVIORAL_DIFFERENTIATION_RESULTS.md  CLOSED_LOOP_VALIDATION.md  FEATURES_5_IMPLEMENTATION.md  FEATURE_LAPLACE_TEMPERATURE.md  FILE_INDEX_AND_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LEARNING_SIGNALS_EXAMPLES.md  LEARNING_SIGNAL_PERSPECTIVE.md  ORACLE_GRADIENT_RESTORATION.md  PAPER_FRAMING.md  QUICK_REFERENCE.md  README.md  SYSTEM_DELIVERY_SUMMARY.md  SYSTEM_DESIGN_CONCEPTS.md  VISUALIZATION_QUICK_REFERENCE.md  VISUALIZATION_SUMMARY.md
env/: __init__.py  agents.py  environment.py  models.py  oracle.py  reward.py  tasks.py  user_simulator.py  utils.py
experiments/: run_evaluation.py
scripts/: analyze_behavioral_diff.py  analyze_contextual.py  analyze_trajectory_evaluation.py  check_oracle.py  compare_alpha_values.py  show_diversity.py  show_system_design_concepts.py  validate_system_design_coverage.py  verify_fix.py  verify_improvements.py
server/: app.py
tests/: test_advanced_rl_features.py  test_agents.py  test_api.py  test_canonical_strategy.py  test_contract_alignment.py  test_environment.py  test_grader_bounds.py  test_hf_space.py  test_learning_signals.py  test_score_improvement.py  test_smoothing_temperature.py  test_validator_bounds.py  validate_score_bounds.py
(+7 files in other folders)
