[project]
name = "architect-rl-env"
version = "1.0.0"
description = "AI system design assistant OpenEnv environment"
authors = [{ name = "Shreya" }]
requires-python = ">=3.10"

dependencies = [
    "openenv-core>=0.2.0",
    "openai>=2.7.2,<3.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pytest>=8.0.0,<9.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pyyaml>=6.0.0,<7.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
